# ctoml

./: CMakeLists.txt  README.md  build.sh  main.c
include/: ctoml.h  error.h  file.h  lexer.h  parser.h  stream.h
res/: array-tables.toml  comments.toml  dates.toml  empty.toml  escapes.toml  huge.toml  invalid.toml  multiline.toml  notoml.json  test.toml  unicode.toml
src/: error.c  file.c  lexer.c  parser.c  stream.c
tests/: CMakeLists.txt  test_ctoml.c
